Add window support
